# mcp-alura

./: .env.example  README.md  claude_desktop_config.json  mcp-all-nodes.json  mcp-autopeças.json  mcp-leitos.json  pyproject.toml  server.py
